# mini-banker

./: README.md  main.ipynb  pyproject.toml
parsed_data/: meta-2024.pdf.json  processed-meta-2024.pdf.json
